gohan: Some power and camera changes

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -41,6 +41,10 @@ on init
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
+    # Set common model number
+    setprop ro.product.name Aquaris_X5_Plus
+    setprop ro.product.device Aquaris_X5_Plus
+
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
