--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -75,6 +75,7 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
     user camera
     group camera system inet input graphics
+    writepid /dev/cpuset/system-background/tasks
 
 on init
    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
@@ -90,11 +91,6 @@ service qseecomd /system/bin/qseecomd
    class core
    user root
    group root
-
-service perfd /system/vendor/bin/perfd
-   class main
-   user root
-   disabled
 
 service thermal-engine /system/vendor/bin/thermal-engine
    class main
@@ -155,6 +151,7 @@ on charger
     wait /dev/block/bootdevice/by-name/system
     mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
     load_all_props
+    start hvdcp_opti
     setprop persist.sys.usb.config mass_storage
     start qcom-post-boot
     setprop persist.sys.usb.config mass_storage
@@ -197,6 +194,11 @@ service adsprpcd /system/bin/adsprpcd
     user media
     group media
 
+service per_mgr /system/bin/pm-service
+    class core
+    user system
+    group system net_raw
+
 service per_proxy /system/bin/pm-proxy
     class late_start
     user system
@@ -208,8 +210,3 @@ on property:init.svc.per_mgr=running
 
 on property:sys.shutdown.requested=*
     stop per_proxy
-
-service per_mgr /system/bin/pm-service
-    class core
-    user system
-    group system net_raw
