--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -126,11 +126,13 @@ WIFI_SUPPLICANT_INFO=BASIC
 
 #Values for PLATFORMS can be:
 #1. Any valid values obtained from ro.board.platform separated by single space. For example: msm8960 msm8226
-#2. all -> for All platforms
+#2. 'all' or 'all exclude' -> for All platforms
+#3. 'all exclude XXXX' -> All platforms exclude XXXX. For example: all exclude msm8937
 
 #Values for BASEBAND can be:
 #1. Any valid values obtained from ro.baseband separated by single space. For example: sglte sglte2
-#2. all -> for all basebands
+#2. 'all' or 'all exclude' -> for all basebands
+#3. 'all exclude XXXX' -> All basebands exclude XXXX. For example: all exclude sglte
 
 #Valyes for LEAN_TARGETS can be:
 #ENABLED  -> if this process is supposed to run on lean and mean targets
@@ -178,7 +180,7 @@ LEAN_TARGETS=DISABLED
 PROCESS_NAME=/system/bin/xtwifi-client
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=net_admin wifi inet gps net_raw rfs_shared
+PROCESS_GROUPS=net_admin wifi inet gps net_raw rfs_shared system
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
