--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -102,6 +102,10 @@ on boot
     chmod 0644 /dev/vfsspi
     chown system system /dev/vfsspi
 
+    # Goodix Fingerprint
+    chmod 0644 /dev/goodix_fp
+    chown system system /dev/goodix_fp
+
 service ppd /system/vendor/bin/mm-pp-daemon
     class late_start
     disabled
@@ -183,3 +187,12 @@ on property:init.svc.per_mgr=running
 
 on property:sys.shutdown.requested=*
     stop per_proxy
+
+service gx_fpd /system/bin/gx_fpd
+    class late_start
+    user system
+    group system
+
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
